--- a/million/card/index.html
+++ b/million/card/index.html
@@ -15507,4 +15507,256 @@
                     <p>可憐なアンティークドール　水瀬伊織 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="35" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card394/">
+                    <img src="img/gree_394_nf.jpg">
+                    <p>ﾋﾅっ子のﾗｲﾌﾞ 木下ひなた</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1989">
+                    <img src="img/td_1989_0_nf.jpg">
+                    <p>おやすみの時間　木下ひなた (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="35" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card395/">
+                    <img src="img/gree_395_nf.jpg">
+                    <p>おやすみの時間 木下ひなた</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1989">
+                    <img src="img/td_1989_1_nf.jpg">
+                    <p>おやすみの時間　木下ひなた (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="29" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1935/">
+                    <img src="img/gree_1935_nf.jpg">
+                    <p>ﾊﾟ-ﾌｪｸﾄｽﾊﾟｲｸ! 高坂海美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1990">
+                    <img src="img/td_1990_0_nf.jpg">
+                    <p>無邪気なアタック　高坂海美 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="29" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1936/">
+                    <img src="img/gree_1936_nf.jpg">
+                    <p>無邪気なｱﾀｯｸ 高坂海美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1990">
+                    <img src="img/td_1990_1_nf.jpg">
+                    <p>無邪気なアタック　高坂海美 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="31" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card439/">
+                    <img src="img/gree_439_nf.jpg">
+                    <p>名誉ある修練 天空橋朋花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1991">
+                    <img src="img/td_1991_0_nf.jpg">
+                    <p>みんなで踊ろ！　天空橋朋花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="31" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1129/">
+                    <img src="img/gree_1129_nf.jpg">
+                    <p>みんなで踊ろ! 天空橋朋花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1991">
+                    <img src="img/td_1991_1_nf.jpg">
+                    <p>みんなで踊ろ！　天空橋朋花 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0859375" idol_id="34" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3054/">
+                    <img src="img/gree_3054_nf.jpg">
+                    <p>最高のｻｳﾝﾄﾞを求めて 舞浜歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1995">
+                    <img src="img/td_1995_0_nf.jpg">
+                    <p>マイミュージックスタイル　舞浜歩 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="34" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3055/">
+                    <img src="img/gree_3055_nf.jpg">
+                    <p>ﾏｲﾐｭ-ｼﾞｯｸｽﾀｲﾙ 舞浜歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1995">
+                    <img src="img/td_1995_1_nf.jpg">
+                    <p>マイミュージックスタイル　舞浜歩 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="30" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card329/">
+                    <img src="img/gree_329_nf.jpg">
+                    <p>小さなﾃﾝﾄｳﾑｼ 中谷育</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1996">
+                    <img src="img/td_1996_0_nf.jpg">
+                    <p>大人ファッションでキメッ！？　中谷育 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="30" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1220/">
+                    <img src="img/gree_1220_nf.jpg">
+                    <p>大人ﾌｧｯｼｮﾝでｷﾒｯ!? 中谷育</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/1996">
+                    <img src="img/td_1996_1_nf.jpg">
+                    <p>大人ファッションでキメッ！？　中谷育 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.15625" idol_id="13" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2540/">
+                    <img src="img/gree_2540_nf.jpg">
+                    <p>みんなでﾊﾞﾅﾅﾎﾞ-ﾄ! 我那覇響</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2001">
+                    <img src="img/td_2001_0_nf.jpg">
+                    <p>海風に揺られて　我那覇響 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1953125" idol_id="13" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2541/">
+                    <img src="img/gree_2541_nf.jpg">
+                    <p>海風に揺られて 我那覇響</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2001">
+                    <img src="img/td_2001_1_nf.jpg">
+                    <p>海風に揺られて　我那覇響 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="15" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1114/">
+                    <img src="img/gree_1114_nf.jpg">
+                    <p>ｲﾉｾﾝﾄﾎﾞﾃﾞｨ 最上静香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2013">
+                    <img src="img/td_2013_0_nf.jpg">
+                    <p>ささやかな温もり　最上静香 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="15" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1115/">
+                    <img src="img/gree_1115_nf.jpg">
+                    <p>ささやかな温もり 最上静香</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2013">
+                    <img src="img/td_2013_1_nf.jpg">
+                    <p>ささやかな温もり　最上静香 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="16" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1920/">
+                    <img src="img/gree_1920_nf.jpg">
+                    <p>美ら海ｶﾞ-ﾙｽﾞ 伊吹翼</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2014">
+                    <img src="img/td_2014_0_nf.jpg">
+                    <p>ジェリーフィッシュ・バラード　伊吹翼 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="16" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1921/">
+                    <img src="img/gree_1921_nf.jpg">
+                    <p>ｼﾞｪﾘ-ﾌｨｯｼｭ･ﾊﾞﾗ-ﾄﾞ 伊吹翼</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2014">
+                    <img src="img/td_2014_1_nf.jpg">
+                    <p>ジェリーフィッシュ・バラード　伊吹翼 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="14" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2537/">
+                    <img src="img/gree_2537_nf.jpg">
+                    <p>海だー!! 春日未来</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2015">
+                    <img src="img/td_2015_0_nf.jpg">
+                    <p>溢れる光と笑顔　春日未来 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="14" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1462/">
+                    <img src="img/gree_1462_nf.jpg">
+                    <p>溢れる光と笑顔 春日未来</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2015">
+                    <img src="img/td_2015_1_nf.jpg">
+                    <p>溢れる光と笑顔　春日未来 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
