--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -5653,4 +5653,28 @@ body, div, a {
                     <img src="img/td_2010 048rei0404_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2019">
+                    <img src="img/td_2019 042miy0394_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2019">
+                    <img src="img/td_2019 042miy0394_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2020">
+                    <img src="img/td_2020 006mak0334_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2020">
+                    <img src="img/td_2020 006mak0334_1.jpg">
+                </a>
+            </div>
         </div></body></html>
