million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -15801,4 +15801,32 @@
                     <p>堂々入場！　周防桃子 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="38" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2061/">
+                    <img src="img/gree_2061_nf.jpg">
+                    <p>店長のﾕｳｳﾂ 二階堂千鶴</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2038">
+                    <img src="img/td_2038_0_nf.jpg">
+                    <p>心尽くしの笑顔　二階堂千鶴 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0546875" idol_id="38" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2062/">
+                    <img src="img/gree_2062_nf.jpg">
+                    <p>心尽くしの笑顔 二階堂千鶴</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2038">
+                    <img src="img/td_2038_1_nf.jpg">
+                    <p>心尽くしの笑顔　二階堂千鶴 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
