--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -5677,4 +5677,28 @@ body, div, a {
                     <img src="img/td_2020 006mak0334_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2036">
+                    <img src="img/td_2036 050jul0414_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2036">
+                    <img src="img/td_2036 050jul0414_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2037">
+                    <img src="img/td_2037 052kao0344_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2037">
+                    <img src="img/td_2037 052kao0344_1.jpg">
+                </a>
+            </div>
         </div></body></html>
