million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -15788,6 +15788,20 @@
                 </a>
             </div>
         </div>
+        <div class="parent" similarity="0.25" idol_id="49" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card142/">
+                    <img src="img/gree_142_nf.jpg">
+                    <p>元子役ｽﾀ- 周防桃子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2023">
+                    <img src="img/td_2023_0_nf.jpg">
+                    <p>堂々入場！　周防桃子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
         <div class="parent" similarity="0.0078125" idol_id="49" >
             <div class="sub">
                 <a href="http://mill.tokyo/vi/card2100/">
