million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -15983,4 +15983,32 @@
                     <p>パンの宴　北上麗花 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="23" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2695/">
+                    <img src="img/gree_2695_nf.jpg">
+                    <p>街中かくれんぼ♪ 野々原茜</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2066">
+                    <img src="img/td_2066_0_nf.jpg">
+                    <p>どのポーズがお好き？　野々原茜 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="23" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3156/">
+                    <img src="img/gree_3156_nf.jpg">
+                    <p>どのﾎﾟ-ｽﾞがお好き? 野々原茜</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2066">
+                    <img src="img/td_2066_1_nf.jpg">
+                    <p>どのポーズがお好き？　野々原茜 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
