million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16011,4 +16011,74 @@
                     <p>どのポーズがお好き？　野々原茜 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.125" idol_id="4" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2607/">
+                    <img src="img/gree_2607_nf.jpg">
+                    <p>ﾄﾞｷﾄﾞｷ撮影ﾀｲﾑ 萩原雪歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2078">
+                    <img src="img/td_2078_1_nf.jpg">
+                    <p>ドキドキ撮影タイム　萩原雪歩 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="47" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2604/">
+                    <img src="img/gree_2604_nf.jpg">
+                    <p>若き暴れ竜 永吉昴</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2079">
+                    <img src="img/td_2079_0_nf.jpg">
+                    <p>記念の一品　永吉昴 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="47" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2605/">
+                    <img src="img/gree_2605_nf.jpg">
+                    <p>記念の一品 永吉昴</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2079">
+                    <img src="img/td_2079_1_nf.jpg">
+                    <p>記念の一品　永吉昴 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.046875" idol_id="22" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1669/">
+                    <img src="img/gree_1669_nf.jpg">
+                    <p>必勝お弁当 箱崎星梨花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2080">
+                    <img src="img/td_2080_0_nf.jpg">
+                    <p>秋晴れ読書タイム　箱崎星梨花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="22" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1484/">
+                    <img src="img/gree_1484_nf.jpg">
+                    <p>秋晴れ読書ﾀｲﾑ 箱崎星梨花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2080">
+                    <img src="img/td_2080_1_nf.jpg">
+                    <p>秋晴れ読書タイム　箱崎星梨花 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
