--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -5797,4 +5797,28 @@ body, div, a {
                     <img src="img/td_2065 005yay0364_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2074">
+                    <img src="img/td_2074 051tmg0354_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2074">
+                    <img src="img/td_2074 051tmg0354_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2075">
+                    <img src="img/td_2075 013hib0364_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2075">
+                    <img src="img/td_2075 013hib0364_1.jpg">
+                </a>
+            </div>
         </div></body></html>
