million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16012,6 +16012,20 @@
                 </a>
             </div>
         </div>
+        <div class="parent" similarity="0.1875" idol_id="4" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2606/">
+                    <img src="img/gree_2606_nf.jpg">
+                    <p>南無高の虎 萩原雪歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2078">
+                    <img src="img/td_2078_0_nf.jpg">
+                    <p>ドキドキ撮影タイム　萩原雪歩 (特訓前)</p>
+                </a>
+            </div>
+        </div>
         <div class="parent" similarity="0.125" idol_id="4" >
             <div class="sub">
                 <a href="http://mill.tokyo/vi/card2607/">
