million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -16095,4 +16095,32 @@
                     <p>秋晴れ読書タイム　箱崎星梨花 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="19" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1422/">
+                    <img src="img/gree_1422_nf.jpg">
+                    <p>月からの使者 佐竹美奈子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2098">
+                    <img src="img/td_2098_0_nf.jpg">
+                    <p>わっほい！お月見ライブ　佐竹美奈子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="19" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1423/">
+                    <img src="img/gree_1423_nf.jpg">
+                    <p>わっほい!お月見ﾗｲﾌﾞ 佐竹美奈子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2098">
+                    <img src="img/td_2098_1_nf.jpg">
+                    <p>わっほい！お月見ライブ　佐竹美奈子 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
