--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -5821,4 +5821,52 @@ body, div, a {
                     <img src="img/td_2075 013hib0364_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2088">
+                    <img src="img/td_2088 008tak0364_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2088">
+                    <img src="img/td_2088 008tak0364_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2089">
+                    <img src="img/td_2089 030iku0424_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2089">
+                    <img src="img/td_2089 030iku0424_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2096">
+                    <img src="img/td_2096 038chz0414_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2096">
+                    <img src="img/td_2096 038chz0414_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2097">
+                    <img src="img/td_2097 003mik0374_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2097">
+                    <img src="img/td_2097 003mik0374_1.jpg">
+                </a>
+            </div>
         </div></body></html>
